fixed GUI class in client, misc files in server